@@ -2,6 +2,9 @@ update-manager (1:0.59.13) feisty; urgency=low
 
   * po/POTFILES.in:
     - reomove [type: ] this confused intltool
+  * DistUpgradeControler.py:
+    - work around problem with kde tempfile extraction 
+      (LP#100074)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon,  2 Apr 2007 11:46:40 +0200
 
